kubernetes/base/002_provenance-engine-deployment.yaml
# Copyright 2022 Universidad Politécnica de Madrid
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: provenance-engine

spec:
  replicas: 1
  selector:
    matchLabels:
      app: provenance-engine
  template:
    metadata:
      labels:
        app: provenance-engine
    spec:
      containers:
        - name: provenance-engine
          image: gravitate-registry.cr.de-fra.ionos.com/provenance-engine:latest
          resources: {}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
